[project]
name = "ml4science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "kagglehub[pandas-datasets]>=0.3.13",
    "phik>=0.12.5",
    "plotly>=6.3.1",
    "ruff>=0.14.1",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[tool.ruff.lint]
select = ["I"]
